src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #3ad3f9;
  --foreground: #171717;
  --color-primary: #049EDB;
  --color-secondary: #024059;
  --color-tertiary: #04BF8A;
  --color-accent: #03A64A;
  --color-error: #532523;
  --color-delete: #FF0000;
  --color-textWhite: #dfe2df;
  --color-textBlack: #464646;
}

:root {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #049EDB;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

.reminder-blur {
  filter: blur(8px) brightness(0.7);
  pointer-events: none;
  user-select: none;
}

.bg-color-delete {
  background-color: var(--color-delete) !important;
}

.bg-color-tertiary {
  background-color: var(--color-tertiary) !important;
}

.text-color-textWhite {
  color: var(--color-textWhite) !important;
}

.text-color-textBlack {
  color: var(--color-textBlack) !important;
}

.border-color-textBlack {
  border-color: var(--color-textBlack) !important;
}

.bg-color-secondary {
  background-color: var(--color-secondary) !important;
}

